deployment/kubernetes/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-agent
  namespace: monitoring

  labels:
    app: monitoring-agent
    app.kubernetes.io/name: monitoring-agent
    app.kubernetes.io/part-of: devops-monitoring-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: monitoring-agent

  template:
    metadata:
      labels:
        app: monitoring-agent

    spec:
      containers:
        - name: monitoring-agent

          image: localhost/devops-monitoring-agent:latest

          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"
