deployment/kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: monitoring

  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: devops-monitoring-platform

spec:
  replicas: 1

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: localhost/devops-monitoring-frontend:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"
