deployment/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: monitoring

spec:
  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: monitoring

spec:
  selector:
    app: backend

  ports:
    - name: http
      port: 8000
      targetPort: 8000

  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: monitoring

spec:
  selector:
    app: frontend

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
